--- a/assets/css/atum-orders.css
+++ b/assets/css/atum-orders.css
@@ -4976,7 +4976,7 @@ ul.atum_order_notes li .note_content::after {
 
 .tablenav.top .tablenav-pages-container.one-page {
   width: 100%;
-  min-width: 200px;
+  min-width: 150px;
 }
 
 .tablenav.top .tablenav-pages-container.one-page.no-submit {
@@ -5426,7 +5426,8 @@ ul.atum_order_notes li .note_content::after {
 .atum-list-wrapper .overflow-opacity-effect-left {
   display: none;
   left: 0;
-  backgroundimage: linear-gradient(to left, rgba(255, 255, 255, 0), rgba(255, 255, 255, 0.9));
+  background-image: -webkit-gradient(linear, right top, left top, from(rgba(255, 255, 255, 0)), to(rgba(255, 255, 255, 0.9)));
+  background-image: linear-gradient(to left, rgba(255, 255, 255, 0), rgba(255, 255, 255, 0.9));
   background-repeat: no-repeat;
 }
 
