--- a/assets/css/atum-suppliers.css
+++ b/assets/css/atum-suppliers.css
@@ -3669,7 +3669,7 @@ h2 .atum-help-tip {
 
 .tablenav.top .tablenav-pages-container.one-page {
   width: 100%;
-  min-width: 200px;
+  min-width: 150px;
 }
 
 .tablenav.top .tablenav-pages-container.one-page.no-submit {
@@ -4119,7 +4119,8 @@ h2 .atum-help-tip {
 .atum-list-wrapper .overflow-opacity-effect-left {
   display: none;
   left: 0;
-  backgroundimage: linear-gradient(to left, rgba(255, 255, 255, 0), rgba(255, 255, 255, 0.9));
+  background-image: -webkit-gradient(linear, right top, left top, from(rgba(255, 255, 255, 0)), to(rgba(255, 255, 255, 0.9)));
+  background-image: linear-gradient(to left, rgba(255, 255, 255, 0), rgba(255, 255, 255, 0.9));
   background-repeat: no-repeat;
 }
 
