--- a/assets/scss/molecules/_list-table.scss
+++ b/assets/scss/molecules/_list-table.scss
@@ -687,7 +687,7 @@
 				min-width: 100px;
 			}
 			width: 100%;
-			min-width: 200px;
+			min-width: 150px;
 		}
 		
 		@include mobile-max {
@@ -1069,7 +1069,7 @@
 	.overflow-opacity-effect-left {
 		display: none;
 		left: 0;
-		backgroundimage: linear-gradient(to left, rgba($white,0), rgba($white,0.9));
+		background-image: linear-gradient(to left, rgba($white,0), rgba($white,0.9));
 		background-repeat: no-repeat;
 	}
 	
